--- a/index.html
+++ b/index.html
@@ -127,7 +127,19 @@
 
     <label>Potentiel</label>
     <input type="number" id="potentiel">
+    
+    <label for="coef_progression">Coefficient de progression</label>
+    <input type="number" id="coef_progression" name="coef_progression" step="0.01" placeholder="ex: 1.25">
 
+    <label for="etat_progression">État de progression (Jour 1)</label>
+    <input type="text" id="etat_progression" name="etat_progression" placeholder="ex: Débutant">
+
+    <label for="marge_progression">Marge de progression</label>
+    <input type="text" id="marge_progression" name="marge_progression" placeholder="ex: Forte">
+
+    <label for="plage_maturite">Plage de maturité</label>
+    <input type="text" id="plage_maturite" name="plage_maturite" placeholder="ex: 23-32 ans">
+    
     <label>XP en stock</label>
     <input type="number" id="xp">
 
